--- a/app/src/main/res/layout/activity_new_group.xml
+++ b/app/src/main/res/layout/activity_new_group.xml
@@ -127,7 +127,7 @@
                 android:text="Participants : 1"/>
             
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/rc_added_gusers"
+                android:id="@+id/rc_gusers"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txt_participants"
