--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -2,12 +2,168 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="#d7d7d7"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/about_map"
+        android:layout_width="match_parent"
+        android:layout_marginTop="1dp"
+        android:layout_height="180dp"/>
+
+    <LinearLayout
+        android:id="@+id/phone_tab"
+        android:layout_below="@+id/about_map"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="About"
-        android:layout_centerInParent="true"/>
+        android:layout_marginTop="1dp"
+        android:orientation="horizontal"
+        android:background="#ffffff">
+
+        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+            android:id="@+id/about_phone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="left|center"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:drawableLeft="@mipmap/icon_phone"
+            android:textColor="#000000"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:text="+81 8476-876-34"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/email_tab"
+        android:layout_below="@+id/phone_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:orientation="horizontal"
+        android:background="#ffffff">
+
+        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+            android:id="@+id/about_email"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="left|center"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:drawableLeft="@mipmap/icon_email"
+            android:textColor="#000000"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:text="volunteerifyngo@gmail.com"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/website_tab"
+        android:layout_below="@+id/email_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:orientation="horizontal"
+        android:background="#ffffff">
+
+        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+            android:id="@+id/about_website"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="left|center"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:drawableLeft="@mipmap/icon_website"
+            android:textColor="#000000"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:text="http://loremipum.com"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/about_tab"
+        android:layout_below="@+id/website_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:orientation="horizontal"
+        android:background="#ffffff">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/icon_about"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:orientation="vertical">
+
+            <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+                android:id="@+id/about_about"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left|center"
+                android:text="About"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:textColor="#000000" />
+
+            <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="left|center"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/mission_tab"
+        android:layout_below="@+id/about_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:orientation="horizontal"
+        android:background="#ffffff">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/icon_mission"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:orientation="vertical">
+
+            <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+                android:id="@+id/about_mission"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left|center"
+                android:textColor="#000000"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:text="Mission"/>
+
+            <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="left|center"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
