--- a/app/src/main/res/layout/event_options_layout.xml
+++ b/app/src/main/res/layout/event_options_layout.xml
@@ -18,18 +18,14 @@
         android:padding="14dp"
         android:foreground="?android:attr/selectableItemBackground"
         >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/opt_share_post"
-            />
-        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+
+        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="16dp"
+            android:textColor="#000000"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:text="Share Post"/>
+            android:text="Report an Issue"/>
     </LinearLayout>
     <View
         android:layout_width="match_parent"
@@ -44,43 +40,14 @@
         android:focusable="true"
         android:orientation="horizontal"
         android:foreground="?android:attr/selectableItemBackground">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/opt_report"
-            />
-        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+
+        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#000000"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:layout_gravity="center"
-            android:layout_marginLeft="16dp"
-            android:text="Report a Post"/>
+            android:text="Claim Ownership"/>
     </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:background="#e2e2e2"
-        android:layout_height="1dp"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:padding="14dp"
-        android:focusable="true"
-        android:orientation="horizontal"
-        android:foreground="?android:attr/selectableItemBackground"
-        >
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/opt_block_user"
-            />
-        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:layout_gravity="center"
-            android:layout_marginLeft="16dp"
-            android:text="Block User"/>
-    </LinearLayout>
+
 </LinearLayout>
