--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -64,10 +64,297 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <include layout="@layout/layout_create_post"/>
+
+        <RelativeLayout
+            android:layout_below="@+id/toolbar"
+            android:background="#d7d7d7"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto">
+
+            <RelativeLayout
+                android:id="@+id/header"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_alignParentTop="true"
+                android:background="#ffffff"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/profilePic"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/user"
+                    android:scaleType="fitCenter" />
+
+                <LinearLayout
+                    android:id="@+id/middle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/profilePic"
+                    android:layout_toLeftOf="@+id/end"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical"
+                    android:layout_centerVertical="true"
+                    android:paddingLeft="10dp">
+
+                    <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
+                        android:id="@+id/event_name"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"
+                        android:ellipsize="end"
+                        android:layout_marginTop="-3dp"
+                        android:text="Lorem Ipsum"
+                        android:textColor="#000"
+                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:paddingLeft="2dp"
+                        android:layout_marginTop="4dp"
+                        android:paddingRight="2dp"
+                        android:background="@drawable/rounded_black_border"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:layout_margin="3dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/earth_gray"/>
+
+                        <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+                            android:id="@+id/entity_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="#000000"
+                            android:layout_gravity="center"
+                            android:text="Public"
+                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
+
+                        <ImageView
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
+                            android:layout_marginTop="2dp"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="2dp"
+                            android:layout_marginRight="4dp"
+                            android:layout_marginLeft="10dp"
+                            android:src="@drawable/drop_down"/>
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/header"
+                android:layout_marginTop="1dp"
+                android:focusableInTouchMode="true"
+                android:layout_marginBottom="1dp"
+                android:background="#ffffff">
+
+                <ImageView
+                    android:id="@+id/post_photo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxHeight="180dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:scaleType="centerCrop" />
+
+                <MultiAutoCompleteTextView
+                    android:layout_below="@+id/post_photo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_margin="10dp"
+                    android:visibility="gone"
+                    android:background="#ffffff"
+                    android:hint="Write something here..."
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
+
+                <com.hendraanggrian.appcompat.widget.SocialAutoCompleteTextView
+                    android:id="@+id/ed_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:hint="What's on your mind?"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+                    android:background="#ffffff"
+                    android:layout_below="@+id/post_photo"
+                    app:social="mention"
+                    app:hyperlinkColor="@color/colorPrimary"/>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_mentions"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:cardMaxElevation="4dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    app:cardElevation="2dp"
+                    app:cardCornerRadius="4dp"
+                    android:visibility="gone"
+                    android:layout_below="@+id/ed_status">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rc_mentions"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                </androidx.cardview.widget.CardView>
+
+                <RelativeLayout
+                    android:id="@+id/footer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#ffffff"
+                    android:layout_alignParentBottom="true">
+
+                    <LinearLayout
+                        android:id="@+id/fragment_history_menu_bottom"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+
+                        <LinearLayout
+                            android:id="@+id/add_photo"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:orientation="horizontal"
+                            android:foreground="?android:attr/selectableItemBackground">
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@mipmap/icon_photos"
+                                />
+                            <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="#000000"
+                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                                android:layout_gravity="center"
+                                android:text="Photo"/>
+                        </LinearLayout>
+                        <View
+                            android:layout_width="match_parent"
+                            android:background="#e2e2e2"
+                            android:layout_height="1dp"/>
+                        <LinearLayout
+                            android:id="@+id/add_tag"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:orientation="horizontal"
+                            android:foreground="?android:attr/selectableItemBackground"
+                            >
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@mipmap/icon_tag"
+                                />
+                            <com.eleganzit.volunteerifyngo.utils.TextViewRobotoRegular
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="#000000"
+                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                                android:layout_gravity="center"
+                                android:text="Tag"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                </RelativeLayout>
+
+
+            </RelativeLayout>
+
+        </RelativeLayout>
+
 
     </RelativeLayout>
 
-    <include layout="@layout/tags_bottom_sheet" />
+
+    <LinearLayout
+        android:id="@+id/bottom_sheet"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#d7d7d7"
+        android:visibility="gone"
+        android:orientation="vertical">
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:descendantFocusability="blocksDescendants">
+
+                <RelativeLayout
+                    android:id="@+id/rel_tagged"
+                    android:background="#ffffff"
+                    android:paddingLeft="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rc_tagged"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toLeftOf="@+id/remove_all"
+                        android:layout_alignParentTop="true"/>
+
+                    <ImageView
+                        android:id="@+id/remove_all"
+                        android:layout_width="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone"
+                        android:layout_alignParentRight="true"
+                        android:src="@mipmap/icon_remove_all"
+                        />
+
+                </RelativeLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rc_untagged"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/rel_tagged"
+                    android:layout_marginTop="1dp"/>
+
+            </RelativeLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+
+
+    </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
