--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -235,6 +235,7 @@
                         android:layout_height="wrap_content">
 
                         <LinearLayout
+                            android:id="@+id/edit_profile"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
@@ -295,6 +296,7 @@
                                 android:layout_height="wrap_content"
                                 android:singleLine="true"
                                 android:ellipsize="end"
+                                android:textSize="12sp"
                                 android:text="More"/>
 
                         </LinearLayout>
