--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -97,12 +97,17 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#ffffff">
+                android:background="#ffffff"
+                android:foreground="?android:selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:paddingTop="7dp"
+                    android:paddingBottom="7dp"
+                    android:background="#ffffff"
+                    android:foreground="?android:selectableItemBackground"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -157,12 +162,17 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#ffffff">
+                android:background="#ffffff"
+                android:foreground="?android:selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:background="#ffffff"
+                    android:foreground="?android:selectableItemBackground"
+                    android:paddingTop="7dp"
+                    android:paddingBottom="7dp"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -209,6 +219,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
+                android:paddingTop="7dp"
+                android:paddingBottom="7dp"
                 android:layout_gravity="center">
 
                 <LinearLayout
@@ -296,6 +308,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
+                android:paddingTop="7dp"
+                android:paddingBottom="7dp"
                 android:layout_gravity="center">
 
                 <LinearLayout
@@ -362,6 +376,7 @@
                 android:orientation="horizontal"
                 android:gravity="center"
                 android:layout_margin="20dp"
+                android:padding="2dp"
                 android:background="@drawable/rounded_green_bg"
                 android:layout_gravity="center">
 
