--- a/app/src/main/res/drawable/status_bg.xml
+++ b/app/src/main/res/drawable/status_bg.xml
@@ -2,10 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:bottomLeftRadius="16dp"
-        android:bottomRightRadius="16dp"
-        android:topLeftRadius="16dp"
-        android:topRightRadius="16dp" />
+        android:bottomLeftRadius="20dp"
+        android:bottomRightRadius="20dp"
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp" />
+
+    <padding android:top="5dp"
+        android:bottom="5dp"/>
 
     <stroke android:width="1dp"
         android:color="#c4c4c4"/>
