--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -198,6 +198,7 @@
             android:text="Following"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/lin_calendar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
