--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -7,6 +7,19 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorPrimaryDark</item>
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
+
+        <item name="android:ambientShadowAlpha" tools:targetApi="lollipop">0.05</item>
+        <item name="android:spotShadowAlpha" tools:targetApi="lollipop">0.5</item>
+    </style>
+
+    <style name="Widget.CalendarView.Custom" parent="android:Widget.CalendarView">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/appGreen</item>
+        <item name="android:focusedMonthDateColor">@color/black</item>
+        <item name="android:weekNumberColor">@color/appGreen</item>
+        <item name="android:weekDayTextAppearance">@style/TextAppearance.AppCompat.Small</item>
+        <item name="android:dateTextAppearance">@style/TextAppearance.AppCompat.Small</item>
     </style>
 
     <style name="AppBottomSheetDialogTheme"
