--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="appGreen">#37b34a</color>
     <color name="appDarkGreen">#236C3F</color>
     <color name="colorYellow">#BE8A00</color>
+    <color name="colorBackground">#CFD0D4</color>
 
 
 </resources>
