--- a/app/src/main/res/layout/fragment_followers.xml
+++ b/app/src/main/res/layout/fragment_followers.xml
@@ -141,12 +141,14 @@
                     </RelativeLayout>
 
                 </LinearLayout>
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rc_followers"
-                    android:layout_below="@+id/header"
                     android:layout_width="match_parent"
-                    android:background="#d7d7d7"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:background="#d7d7d7">
 
                 </androidx.recyclerview.widget.RecyclerView>
 
