--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CFD0D4"
+    android:background="@color/colorBackground"
     tools:context=".NewsFeedActivity">
 
     <androidx.appcompat.widget.Toolbar
