--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -433,7 +433,7 @@
                 android:background="#ffffff">
 
                 <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
-                    android:id="@+id/tab_home"
+                    android:id="@+id/tab_photos"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -443,7 +443,7 @@
                     android:text="Photos"/>
 
                 <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
-                    android:id="@+id/tab_about"
+                    android:id="@+id/tab_following"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -453,7 +453,7 @@
                     android:text="Following"/>
 
                 <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
-                    android:id="@+id/tab_photos"
+                    android:id="@+id/tab_events"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -463,7 +463,7 @@
                     android:text="Events"/>
 
                 <com.eleganzit.volunteerifyngo.utils.TextViewRobotoBold
-                    android:id="@+id/tab_events"
+                    android:id="@+id/tab_milestone"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -478,7 +478,16 @@
                 android:id="@+id/frame"
                 android:layout_below="@+id/profile_tabs"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rc_my_posts"
+                android:layout_width="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:layout_below="@+id/frame"
+                android:layout_height="match_parent">
+
+            </androidx.recyclerview.widget.RecyclerView>
 
         </RelativeLayout>
 
