--- a/app/src/main/res/layout/activity_news_feed.xml
+++ b/app/src/main/res/layout/activity_news_feed.xml
@@ -151,6 +151,7 @@
             android:weightSum="4">
 
             <RelativeLayout
+                android:id="@+id/rel_feed"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:layout_width="wrap_content"
@@ -165,6 +166,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/rel_event"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:layout_width="wrap_content"
@@ -203,6 +205,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/rel_user"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:layout_width="wrap_content"
@@ -217,6 +220,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/rel_menu"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:layout_width="wrap_content"
